client/app/styles/base.scss
@import "_meta";

.callisto-logo {
  width: 100px;
  height: 100px;
  display: block;
  margin: 0 auto 20px;
}

.bold {
  font-weight: bolder;
}

.block {
  display: block;
}

input.ng-dirty.ng-invalid {
  box-shadow: 0 0 1px 1px darkred;
}

.alert-danger {
  font-weight: bolder;
  color: darkred;
}

.sr-only-focusable {
  position: absolute;
  clip: rect(0,0,0,0);

  &:hover,
  &:active,
  &:focus {
    position: static;
    clip: auto;
  }
}

.skip-to-main {
  font-size: 2rem;
  text-align: center;
  padding: 40px;
  display: block;
  color: white;
  background-color: $palette-dark-gray;
}

.main-content:host,
* {
  font-family: $font-body;
}

.text-centered {
  text-align: center;
}

.txt-flex-center {
  justify-content: center;
  flex-direction: column;
}

h1,
h2 {
  font-family: $font-headers;
  font-size: 2rem;
}

.align-right-on-large {
  @media (min-width: $breakpoint-sm) {
    text-align: right;
  }
}

a.btn {
  text-decoration: none;
}

.btn {
  color: $palette-white;
  background-color: $palette-dark-blue;
  letter-spacing: 1px;
  padding: 15px 10px;
  border: 2px solid $palette-dark-blue;

  &.ui-state-active,
  &:hover,
  &:active,
  &:focus {
    color: $palette-white;
    background-color: $palette-dark-gray;
  }

  &:disabled {
    background-color: $color-button-disabled;
    border-color: transparent;
  }
}

.white-btn {
  background-color: white;
  border: 2px solid $palette-dark-gray;
  color: $palette-dark-gray;

  &.ui-state-active,
  &:hover,
  &:active,
  &:focus {
    border: 2px solid $palette-dark-blue;
  }
}

.pull-right {
  display: inline-block;
  float: right;
}

.pull-left {
  display: inline-block;
  float: left;
}

.flex-box {
  display: flex;
}

@media (min-width: $breakpoint-lg) {
  .float-left-on-large {
    float: left;
  }
  .float-right-on-large {
    float: right;
    text-align: right;
  }
}

